--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "yargs": "^3.29.0"
   },
   "dependencies": {
-    "material-ui": "0.15.4"
+    "material-ui": "0.15.4",
+    "react-highlight": "^0.9.0"
   }
 }
