--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-minify-css": "^1.2.1",
     "gulp-sass": "^2.0.4",
     "gulp-shell": "^0.5.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.5",
     "webpack": "^1.13.1",
     "yargs": "^3.29.0"
