--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "dependencies": {
     "material-ui": "0.15.4",
-    "react-highlight": "^0.9.0"
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-highlight": "^0.9.0",
+    "react-webcam": "0.0.14"
   }
 }
